# genshiny

./: .gitignore  Cargo.toml  Genshiny.py  README.md  gachamodel.pyi  main.py  pyproject.toml  requirements.txt
core/: assets.py  config.py  containers.py  model.py  modelv2.py  text.py  utils.py
src/: lib.rs
ui/: BarGraph.py  BooleanComboBox.py  CountSpinbox.py  Dropdown.py  ErrorDialog.py  FrameBox.py  Heatmap.py  HorizontalDivider.py  MainWindow.py  SimulationDialog.py  TextInput.py  VerticalDivider.py  utils.py
