[package]
name = "gachamodel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gachamodel"
crate-type = ["cdylib"]

[dependencies]
indexmap = "2.12.0"
pyo3 = { version = "0.27.0", features = ["indexmap"] }
fastrand = "2.3.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1